Revert "Apply `box-sizing: border-box` globally (#7349)"
This reverts commit 7dd9bc89716603ba602985baf720c7d4623fbe07.

--- a/app/assets/stylesheets/active_admin/_forms.scss
+++ b/app/assets/stylesheets/active_admin/_forms.scss
@@ -304,6 +304,7 @@ form.filter_form {
 
     &.filter_date_range {
       input[type=text] {
+        box-sizing: border-box;
         width: $date-range-filter-input-width;
 
         + input {
