--- a/app/assets/stylesheets/active_admin/components/_date_picker.scss
+++ b/app/assets/stylesheets/active_admin/components/_date_picker.scss
@@ -17,10 +17,11 @@
   }
 
   .ui-datepicker-header {
+    height: 14px;
     @include primary-gradient;
     padding: 12px 5px 7px 4px;
     margin: 0px 0px 2px 2px;
-    width: 156px;
+    width: 147px;
     border-top-left-radius: 7px;
     border-top-right-radius: 7px;
     position: relative;
