--- a/app/assets/stylesheets/active_admin/components/_dropdown_menu.scss
+++ b/app/assets/stylesheets/active_admin/components/_dropdown_menu.scss
@@ -106,6 +106,7 @@
       li {
         display: block;
         border-bottom: solid 1px #ebebeb;
+        box-sizing: border-box;
 
         a {
           display: block;
